# lazyscript

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Lazyscript.hpp  Scanner.hpp  Token.hpp  TokenType.hpp
src/: Lazyscript.cpp  Scanner.cpp  Token.cpp  main.cpp
